@startuml

title __TASK_1's Class Diagram__\n

  namespace tasks.task_1 {
    class tasks.task_1.Bicycle {
        + Bicycle()
        + getCostOfShipping()
    }
  }
  

  namespace tasks.task_1 {
    class tasks.task_1.Car {
        + Car()
        + getCostOfShipping()
    }
  }
  

  namespace tasks.task_1 {
    class tasks.task_1.Carriage {
        + Carriage()
        + getCostOfShipping()
    }
  }
  

  namespace tasks.task_1 {
    class tasks.task_1.Facade {
        ~ transports : List<Transport>
        + Facade()
        + sendTransportOrder()
    }
  }
  

  namespace tasks.task_1 {
    class tasks.task_1.Main {
        {static} + main()
    }
  }
  

  namespace tasks.task_1 {
    class tasks.task_1.Transport {
        - costPerKilometerForCargo : int
        - costPerKilometerForPassenger : int
        - maxSpeed : int
        - transportType : String
        + Transport()
        + getCostOfShipping()
        + getCostPerKilometerForCargo()
        + getCostPerKilometerForPassenger()
        + getMaxSpeed()
        + getTimeOfShipping()
    }
  }
  

  tasks.task_1.Bicycle -up-|> tasks.task_1.Transport
  tasks.task_1.Car -up-|> tasks.task_1.Transport
  tasks.task_1.Carriage -up-|> tasks.task_1.Transport


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml